--- a/service/build.gradle
+++ b/service/build.gradle
@@ -2,12 +2,12 @@ apply plugin: EnterprisePlugin
 
 dependencies {
     implementation project(':core')
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.18.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-cache:2.1.18.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.15'
+    implementation 'org.springframework.boot:spring-boot-starter-cache:2.6.15'
     
     // Conflicting versions to simulate enterprise dependency hell
-    implementation('org.hibernate:hibernate-core:5.4.32.Final') {
+    implementation('org.hibernate:hibernate-core:5.6.15.Final') {
         exclude group: 'org.jboss.logging'
     }
-    implementation 'org.jboss.logging:jboss-logging:3.3.2.Final'
+    implementation 'org.jboss.logging:jboss-logging:3.4.3.Final'
 }
